Fix (Tictactoe): optimize automatic scroll in move history and fix horizontal scroll issue

--- a/src/components/Tictactoe/MovesHistory/MovesHistory.css
+++ b/src/components/Tictactoe/MovesHistory/MovesHistory.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     flex-grow: 1; /* Container takes up all available space */
     overflow-y: auto; /* Adds vertical scrolling */
+    overflow-x: hidden; /* Disabled overflow-x to prevent scroll jumps in the move history. */
 }
 
 /* Container for the sorting bar */
@@ -64,6 +65,7 @@
     counter-reset: history-counter; /* Resets the counter */
     padding: 0;
     margin: 0;
+    overflow-x: hidden; /* Disabled overflow-x to prevent scroll jumps in the move history. */
 }
 
 /* Styling for list item */
